# wordopposite-API

./: CONTRIBUTING.md  README.md  index.d.ts  index.js  openapi.yaml  package.json
android/: README.md  build.gradle
android/src/main/java/com/apiverve/wordopposite/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/wordopposite/data/: ResponseModels.java
examples/: README.md  basic.js
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
npm/: index.d.ts  package.json
nuget/: ResponseObj.cs  WordOppositesAPIClient.cs  WordOppositesAPIClient.csproj  WordOppositesQueryOptions.cs
python/: README.md  pyproject.toml
python/src/apiverve_wordopposites/: setup.py  setup_dep.py
