[project]
name = "apiverve-wordopposites"
version = "1.1.12"
authors = [
  { name="APIVerve", email="hello@apiverve.com" },
]
description = "Word Opposites is a simple tool for getting the opposites of a word. It returns a list of opposites for the given word."
keywords = ["word opposite", "word opposite api", "word opposite tool", "word opposite software", "word opposite service"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Security",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://apiverve.com?utm_source=pypi"
Repository = "https://github.com/apiverve/wordopposite-api"
Documentation = "https://docs.apiverve.com/api/wordopposite?utm_source=pypi"
Twitter = "https://twitter.com/apivervehq"